--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
-.DS_Store
-node_modules
+# dependencies
+/node_modules
 /dist
-
 
 # local env files
 .env.local
@@ -12,12 +11,3 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
-
-# Editor directories and files
-.idea
-.vscode
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
